examples/errors/cant_initialize_variable_with_not_returning_func.jj
func f
with x


func main
{
    let mut x { 2 };
    x = f(1);
}